--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,5 +10,5 @@ Username: <%= a.text_field :username %>
 Email: <%= a.text_field :email %>
 Password: <%= a.password_field :password %>
 Password confirmation: <%= a.password_field :password_confirmation %>
-<%= a.submit "add user"%>
+<%= a.submit "add user", {class: "btn btn-primary"}%>
 <% end %>
