--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,127 @@
 <body>
 
 
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">job track</a>
+      </div>
+
+
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+
+          <li><a href="#">home</a></li>
+          <li><a href="#">about</a></li>
+          <li><a href="#">faq</a></li>
+          <li><a href="#">blog</a></li>
+          <li><a href="#">interview you</a></li>
+          <li><a href="#">resources</a></li>
+          <li><a href="#">contact</a></li>
+          <li class="dropdown active">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">user dashboard<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#">log out</a></li>
+
+              <li><a href="#">manage my user account</a></li>
+              <li class="divider"></li>
+              <li><a href="#">user dashboard - view all jobs</a></li>
+              <li><a href="#">add a new job to track</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+              <li class="divider"></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+
+
+
+        </ul>
+
+
+        <%= form_tag sessions_path, class:"navbar-form navbar-right", role:"form" do %>
+          <div class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+            <%= text_field_tag :email, params[:email], placeholder:"email", class:"form-control" %>
+          </div>
+
+        <div class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+            <%= password_field_tag :password, nil, placeholder:"password", class:"form-control" %>
+        </div>
+
+
+        <%= submit_tag "Log in", class:"btn btn-primary" %>
+        <% end %>
+      </div>
+      <p>&nbsp;</p>
+      <p align="right">&rarr; create user account</p>
+    </div>
+  </nav>
+
+
+
+
+
+
+
+
+
+  <div class="container-fluid">
+  <div class="row">
+    <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+      <h1>user dashboard</h1>
+
+      <p>christine is logged in</p>
+      <p>&nbsp;</p>
+      <p><strong>manage my account</strong></p>
+      <ul>
+        <li>create user account</li>
+        <li>edit user account</li>
+        <li>delete user account</li>
+      </ul>
+
+      <p>&nbsp;</p>
+      <p><strong>manage jobs tracked</strong></p>
+      <ul>
+        <li>view all jobs</li>
+        <li>add a job</li>
+        <li>delete job</li>
+      </ul>
+
+      <p>&nbsp;</p>
+      <p><strong>manage resumes</strong></p>
+      <ul>
+        <li>view all resumes</li>
+        <li>add a resume version</li>
+        <li>delete resume</li>
+      </ul>
+
+      <p>&nbsp;</p>
+      <p><strong>manage coverletters and docs</strong></p>
+      <ul>
+        <li>view all coverletters</li>
+        <li>add coverletter</li>
+        <li>delete coverletter</li>
+      </ul>
+    </div>
+
+    <div class="col-xs-12 col-sm-7 col-md-8 col-lg-9">
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce consequat rutrum viverra. Fusce sed ultrices mi. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum porttitor bibendum bibendum. Donec eget nunc a purus posuere dignissim. In mollis neque ac hendrerit pulvinar. Fusce id libero massa. Donec egestas ipsum eget dolor ullamcorper laoreet. Phasellus euismod tempus turpis, at dapibus urna facilisis eget. Donec vel est accumsan, interdum lectus nec, hendrerit lacus. Fusce euismod velit sed nisi ultrices pulvinar. Quisque gravida, elit ut mollis mattis, lorem mi dignissim ligula, sed cursus velit neque sed justo.</p>
+
+  </div>
+  </div>
+
+  </div>
+
 
 
 
