--- a/app/views/jobprospects/index.html.erb
+++ b/app/views/jobprospects/index.html.erb
@@ -2,16 +2,19 @@
 <p>Find me in app/views/jobprospects/index.html.erb</p>
 
 
+<%= @jobprospects.inspect %>
 
-<% @jobprospects.each do |x| %>
+<% @jobprospects.each do |job| %>
+  <p>
+    <strong>Position Title: </strong> <%= job.positiontitle %> &nbsp; &nbsp; <%= link_to "#{job.positiontitle}", jobprospect_path(job) %>
+  <br>
+    <strong>Company Name: </strong> <%= job.companyname %> &nbsp; &nbsp; <%= link_to "#{job.companyname}", jobprospect_path(job) %>
+  <br>
+    <strong>Status: </strong> <%= job.status %> &nbsp; &nbsp; <%= link_to "#{job.status}", jobprospect_path(job) %>
+  <p></p>
+<% end %>
 
-<div>Position Title: <%= link_to "#{x.positiontitle}", jobprospect_path(x) %></div>
-<div>Company Name: <%= x.companyname %></div>
-<div>Status: <%= x.status %></div>
-
-<p></p>
 
 <%#= link_to 'Show', jobprospect %>
 <%#= link_to 'Edit', edit_jobprospect_path(x) %>
 <%#= link_to 'Destroy', jobprospect, method: :delete, data: { confirm: 'Are you sure?' } %>
-<% end %>
