--- a/app/views/users/update.html.erb
+++ b/app/views/users/update.html.erb
@@ -1,2 +1,8 @@
-<h1>Users#update</h1>
-<p>Find me in app/views/users/update.html.erb</p>
+<h1>Your User Account Has Successfully Been Updated!</h1>
+<p>&nbsp;</p>
+
+<h1>Hello <%= @user.firstname %> <%= @user.lastname %>,</h1>
+
+Your username is <%= @user.username %>.
+<p></p>
+Your email address on file is <%= @user.email %>.
