--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -22,6 +22,10 @@
    font-size: 12px;
  }
 
+ a {
+     color: #ffffff;
+     text-decoration: underline;
+ }
 
 .menu_links {
     color: #ffffff;
