--- a/app/views/jobprospects/edit.html.erb
+++ b/app/views/jobprospects/edit.html.erb
@@ -1,37 +1,39 @@
-<h1>Jobprospects#edit</h1>
-<p>Find me in app/views/jobprospects/edit.html.erb</p>
-
-
-
-<h1>Edit This Job Prospect</h1>
+<h1>edit your this job prospect</h1>
 <p>&nbsp;</p>
 
+<%= form_for @jobprospects do |a| %>
 
-<%= form_for @jobprospect do |a| %>
-
-Job Status: <%= a.collection_select :status, Jobprospect.jobstatus, :to_s, :to_s, :include_blank => false %>
+<strong>job status:</strong> <%= a.collection_select :status, Jobprospect.jobstatus, :to_s, :to_s, :include_blank => false %>
 <p></p>
-Position Title: <%= a.text_field :positiontitle %>
+<strong>position title:</strong> <%= a.text_field :positiontitle %>
 <p></p>
-Job Description: <%= a.text_field :description %>
+<strong>job description:</strong> <%= a.text_field :description %>
 <p></p>
-Company Name: <%= a.text_field :companyname %>
+<strong>company name:</strong> <%= a.text_field :companyname %>
 <p></p>
-City: <%= a.text_field :city %>
+<strong>city:</strong> <%= a.text_field :city %>
 <p></p>
-Contact 1: <%= a.text_field :contact01 %>
+<strong>contact 1:</strong> <%= a.text_field :contact01 %>
 <p></p>
-Contact 1 Email: <%= a.text_field :contact01email %>
+<strong>contact 1 email:</strong> <%= a.text_field :contact01email %>
 <p></p>
-Contact 1 Phone #: <%= a.text_field :contact01phone %>
+<strong>contact 1 phone #:</strong> <%= a.text_field :contact01phone %>
 <p></p>
-Contact 2: <%= a.text_field :contact02 %>
+<strong>contact 2:</strong> <%= a.text_field :contact02 %>
 <p></p>
-Contact 2 Email: <%= a.text_field :contact02email %>
+<strong>contact 2 email:</strong> <%= a.text_field :contact02email %>
 <p></p>
-Contact 2 Phone #: <%= a.text_field :contact02phone %>
+<strong>contact 2 phone #:</strong> <%= a.text_field :contact02phone %>
 <p></p>
-Comments: <%= a.text_field :comments %>
+<strong>comments:</strong> <%= a.text_field :comments %>
 <p></p>
-<%= a.submit "add job", {class: "btn btn-primary"}%>
+<%= a.submit "edit this job", {class: "btn btn-primary"}%>
 <% end %>
+
+
+
+<p></p>
+<p>&nbsp;</p>
+&rarr; <%= link_to "click here to delete this job.", :jobprospect, method: :delete, data: {confirm: "are you sure you want to delete this job forever?"} %>
+<p></p>
+&rarr; <%= link_to "go back to user dashboard to view all jobs you've applied for!", jobprospects_path %>
