--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -26,12 +26,12 @@
           <li class="dropdown active">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">user dashboard<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">log out</a></li>
+              <li><%= link_to "log out", logout_path %></li>
 
               <li><a href="#">manage my user account</a></li>
               <li class="divider"></li>
-              <li><a href="#">view all jobs applied for</a></li>
-              <li><a href="#">add a new job to track</a></li>
+              <li><%= link_to "view all jobs applied for", jobprospects_path(@jobprospect), class:"menu_links" %></li>
+              <li><%= link_to "add a new job to track", new_jobprospect_path(@jobprospect), class:"menu_links" %></li>
               <li class="divider"></li>
               <li><a href="#">Separated link</a></li>
               <li class="divider"></li>
@@ -43,7 +43,7 @@
 
         </ul>
 
-
+      <% unless current_user %>
         <%= form_tag sessions_path, class:"navbar-form navbar-right", role:"form" do %>
           <div class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
@@ -58,8 +58,10 @@
 
         <%= submit_tag "Log in", class:"btn btn-primary" %>
         <% end %>
+        <p>&nbsp;</p>
+        <p align="right">&rarr; <%= link_to "create user account", new_user_path(@user), class:"menu_links" %></p>
+      <% end %>
       </div>
-      <p>&nbsp;</p>
-      <p align="right">&rarr; <%= link_to "create user account", new_user_path(@user), class:"menu_links" %></p>
+
     </div>
   </nav>
