--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,6 @@
 <%= render 'layouts/nav' %>
 
 
-
-
   <div class="container-fluid">
   <div class="row">
     <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
@@ -25,18 +23,17 @@
       <p>&nbsp;</p>
       <p><strong>manage my account</strong></p>
       <ul>
-        <li><%= link_to "create user account", new_user_path(@user), class:"menu_links" %></li>
-
-
-        <li>delete user account</li>
-      </ul>
+        <li><%= link_to "create user account", new_user_path, class:"menu_links" %></li>
+        <%  if current_user %>
+          <li><%= link_to("edit user account", edit_user_path(current_user), class:"menu_links")%></li>
+          <% end %>
+</ul>
 
       <p>&nbsp;</p>
       <p><strong>manage jobs tracked</strong></p>
       <ul>
-        <li>view all jobs</li>
+        <li><%= link_to "view all jobs", jobprospects_path(@jobprospect), class:"menu_links" %></li>
         <li><%= link_to "add a job", new_jobprospect_path(@jobprospect), class:"menu_links" %></li>
-        <li>delete job</li>
       </ul>
 
       <p>&nbsp;</p>
@@ -58,8 +55,8 @@
 
     <div class="col-xs-12 col-sm-7 col-md-8 col-lg-9">
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce consequat rutrum viverra. Fusce sed ultrices mi. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum porttitor bibendum bibendum. Donec eget nunc a purus posuere dignissim. In mollis neque ac hendrerit pulvinar. Fusce id libero massa. Donec egestas ipsum eget dolor ullamcorper laoreet. Phasellus euismod tempus turpis, at dapibus urna facilisis eget. Donec vel est accumsan, interdum lectus nec, hendrerit lacus. Fusce euismod velit sed nisi ultrices pulvinar. Quisque gravida, elit ut mollis mattis, lorem mi dignissim ligula, sed cursus velit neque sed justo.</p>
-    <p>&nbsp;</p>
+<% @user.inspect %>
+
 <%= yield %>
 
 
