--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,4 +1,3 @@
-
   <nav class="navbar navbar-default">
     <div class="container-fluid">
 
@@ -16,7 +15,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
 
-          <li><a href="#">home</a></li>
+          <li><%= link_to "home", root_path, class:"menu_links" %></li>
           <li><a href="#">about</a></li>
           <li><a href="#">faq</a></li>
           <li><a href="#">blog</a></li>
@@ -26,24 +25,16 @@
           <li class="dropdown active">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">user dashboard<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><%= link_to "log out", logout_path %></li>
+              <li><%= link_to "log out", logout_path, class:"menu_links" %></li>
 
-              <li><a href="#">manage my user account</a></li>
+              <li><%= link_to("edit user account", edit_user_path(current_user), class:"menu_links")%></li>
               <li class="divider"></li>
               <li><%= link_to "view all jobs applied for", jobprospects_path(@jobprospect), class:"menu_links" %></li>
               <li><%= link_to "add a new job to track", new_jobprospect_path(@jobprospect), class:"menu_links" %></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
             </ul>
           </li>
-
-
-
         </ul>
 
-      <% unless current_user %>
         <%= form_tag sessions_path, class:"navbar-form navbar-right", role:"form" do %>
           <div class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
@@ -55,13 +46,11 @@
             <%= password_field_tag :password, nil, placeholder:"password", class:"form-control" %>
         </div>
 
-
         <%= submit_tag "Log in", class:"btn btn-primary" %>
         <% end %>
         <p>&nbsp;</p>
         <p align="right">&rarr; <%= link_to "create user account", new_user_path(@user), class:"menu_links" %></p>
-      <% end %>
-      </div>
 
+      </div>
     </div>
   </nav>
