--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,69 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<% if current_user %>
 <%= render 'layouts/nav' %>
 
+<div class="container-fluid">
 
-  <div class="container-fluid">
-  <div class="row">
-    <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
-      <h1>user dashboard</h1>
-
-
-      <p><%#= current_user.email %><br>
-        is logged in
-      </p>
-      <p>&nbsp;</p>
-      <p><strong>manage my account</strong></p>
-      <ul>
-        <li><%= link_to "create user account", new_user_path, class:"menu_links" %></li>
-        <%  if current_user %>
-          <li><%= link_to("edit user account", edit_user_path(current_user), class:"menu_links")%></li>
-          <% end %>
-</ul>
-
-      <p>&nbsp;</p>
-      <p><strong>manage jobs tracked</strong></p>
-      <ul>
-        <li><%= link_to "view all jobs", jobprospects_path(@jobprospect), class:"menu_links" %></li>
-        <li><%= link_to "add a job", new_jobprospect_path(@jobprospect), class:"menu_links" %></li>
-      </ul>
-
-      <p>&nbsp;</p>
-      <p><strong>manage resumes</strong></p>
-      <ul>
-        <li>view all resumes</li>
-        <li>add a resume version</li>
-        <li>delete resume</li>
-      </ul>
-
-      <p>&nbsp;</p>
-      <p><strong>manage coverletters and docs</strong></p>
-      <ul>
-        <li>view all coverletters</li>
-        <li>add coverletter</li>
-        <li>delete coverletter</li>
-      </ul>
-    </div>
-
-    <div class="col-xs-12 col-sm-7 col-md-8 col-lg-9">
-
-<% @user.inspect %>
+<%= render 'layouts/sidebar' %>
+<% end %>
 
 <%= yield %>
 
-
-
-  </div>
-  </div>
-
-  </div>
-
-
-
-
-
+</div>
+</div>
+</div>
 
 </body>
 </html>
