--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,25 +1,28 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
-
-
-
-
-<h1>Create a User Account</h1>
+<p>&nbsp;</p>
+<div class="col-md-3">
+<h1>create a user account</h1>
 <p>&nbsp;</p>
 
+<%= form_for @user, class:"navbar-form navbar-right", role:"form" do |a| %>
+<div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+<%= a.text_field :firstname, placeholder:"first name", class:"form-control"  %></div>
+<p></p>
+<div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+<%= a.text_field :lastname, placeholder:"last name", class:"form-control" %></div>
+<p></p>
+<div class="input-group"><span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+<%= a.text_field :username, placeholder:"username", class:"form-control" %></div>
+<p></p>
+<div class="input-group">
+<span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span><%= a.text_field :email, placeholder:"email", class:"form-control" %></div>
+<p></p>
+<div class="input-group">
+<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span><%= a.password_field :password, placeholder:"password", class:"form-control"  %></div>
+<p></p>
+<div class="input-group">
+<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span><%= a.password_field :password_confirmation, placeholder:"password confirmation", class:"form-control"  %></div>
 
-<%= form_for @user do |a| %>
-First Name: <%= a.text_field :firstname %>
-<p></p>
-Last Name: <%= a.text_field :lastname %>
-<p></p>
-Username: <%= a.text_field :username %>
-<p></p>
-Email: <%= a.text_field :email %>
-<p></p>
-Password: <%= a.password_field :password %>
-<p></p>
-Password Confirmation: <%= a.password_field :password_confirmation %>
 <p></p>
 <%= a.submit "add user", {class: "btn btn-primary"}%>
 <% end %>
+</div>
